# test-fixture

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  stack-18.0.yaml  stack-7.10.yaml  stack-8.0.yaml  stack-8.2.yaml  stack.yaml  test-fixture.cabal
src/Control/Monad/: TestFixture.hs
src/Control/Monad/TestFixture/: TH.hs
src/Control/Monad/TestFixture/TH/: Internal.hs
src/Control/Monad/TestFixture/TH/Internal/: TypesQuasi.hs
test/Control/DeepSeq/: TemplateHaskell.hs
test/Test/Control/Monad/: TestFixtureSpec.hs
test/Test/Control/Monad/TestFixture/: DefaultSignaturesSpec.hs  THSpec.hs
