name:
  test-fixture
version:
  0.1.0.0
synopsis:
 Test monadic typeclasses deterministically using hooks.
description:
  Please see README.md
homepage:
  http://github.com/cjdev/test-fixture#readme
license:
  BSD3
license-file:
  LICENSE
author:
  Joe Vargas
maintainer:
  jvargas@cj.com
copyright:
  2016 CJ Affiliate by Conversant
category:
  Test
build-type:
  Simple
-- extra-source-files:
cabal-version:
   >=1.10

library
  hs-source-dirs:
    src
  exposed-modules:
    Control.Monad.TestFixture
  build-depends:
      base >= 4.7 && < 5
    , mtl
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/cjdev/test-fixture
