name:
  test-fixture
version:
  0.4.1.0
synopsis:
  Test monadic side-effects
description:
  Please see README.md
homepage:
  http://github.com/cjdev/test-fixture#readme
license:
  BSD3
license-file:
  LICENSE
author:
  Joe Vargas
maintainer:
  jvargas@cj.com
copyright:
  2016 CJ Affiliate by Conversant
category:
  Test
build-type:
  Simple
-- extra-source-files:
cabal-version:
   >=1.10

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  exposed-modules:
    Control.Monad.TestFixture
    Control.Monad.TestFixture.TH
  build-depends:
      base >= 4.7 && < 5
    , data-default
    , mtl
    , template-haskell >= 2.10 && < 2.12

source-repository head
  type:
    git
  location:
    https://github.com/cjdev/test-fixture

test-suite test-fixture-test-suite
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  default-language: Haskell2010
  other-modules:
      Test.Control.Monad.TestFixtureSpec
  build-depends:
      base >= 4.7 && < 5
    , test-fixture
    , hspec
    , hspec-discover
    , transformers
    , mtl
