name:
  test-fixture
version:
  0.5.0.0
synopsis:
  Test monadic side-effects
description:
  Please see README.md
homepage:
  http://github.com/cjdev/test-fixture#readme
license:
  BSD3
license-file:
  LICENSE
author:
  Joe Vargas
maintainer:
  jvargas@cj.com
copyright:
  2016 CJ Affiliate by Conversant
category:
  Test
build-type:
  Simple
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md
cabal-version:
   >=1.10

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  exposed-modules:
    Control.Monad.TestFixture
    Control.Monad.TestFixture.TH
    Control.Monad.TestFixture.TH.Internal
    Control.Monad.TestFixture.TH.Internal.TypesQuasi
  build-depends:
      base >= 4.7 && < 5
    , data-default
    , haskell-src-exts
    , haskell-src-meta
    , mtl
    , template-haskell >= 2.10 && < 2.12
    , th-orphans

source-repository head
  type:
    git
  location:
    https://github.com/cjdev/test-fixture

test-suite test-fixture-test-suite
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -Wall
  other-modules:
    Test.Control.Monad.TestFixtureSpec
    Test.Control.Monad.TestFixture.THSpec
  build-depends:
      base >= 4.7 && < 5
    , test-fixture
    , hspec
    , hspec-discover
    , mtl
    , template-haskell >= 2.10 && < 2.12
    , transformers
  if impl(ghc >= 8.0.0.0)
    build-depends:
      th-to-exp
